# entropic_rotation_curves

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
src/egrrc/: __init__.py  __main__.py  rc.py  run_all.py
tests/: test_selftest.py
